<?xml version="1.0" encoding="utf-8"?>
<!--
Author: Junied Ahmed Jisan
* Date: 2020-11-28
* Login page UI with username and password elements
* Login button takes user to the landing page
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/logoname"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.activities.Login">

    <ImageView
        android:id="@+id/loginIconImage"
        android:layout_width="185dp"
        android:layout_height="200dp"
        android:layout_marginTop="16dp"
        android:contentDescription="logo"
        android:src="@drawable/money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/loginEmailText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/loginPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:hint="Username or Email"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginAppNameLabel"
        app:layout_constraintVertical_bias="0.019"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/loginPasswordText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/loginEmailText"
        android:layout_alignLeft="@+id/loginEmailText"
        android:layout_marginTop="12dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toTopOf="@+id/loginStatusMessage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginEmailText" />

    <Button
        android:id="@+id/loginLoginButton"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/custom_button2"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginStatusMessage"
        app:layout_constraintVertical_bias="0.038" />

    <TextView
        android:id="@+id/loginAppNameLabel"
        android:layout_width="96dp"
        android:layout_height="29dp"
        android:layout_marginTop="24dp"
        android:forceDarkAllowed="true"
        android:text="Quick Cash"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginIconImage"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/loginRegisterButton"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginLoginButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/loginStatusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginPasswordText" />

</androidx.constraintlayout.widget.ConstraintLayout>

