<?xml version="1.0" encoding="utf-8"?>
<!--
Author: Junied Ahmed Jisan
* Date: 2020-11-28
* Landing/Dashboard page connecting to Job add and Job search pages
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/job_search"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.activities.MainPage">


    <Button
        android:id="@+id/jobCreateJobButton3"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:background="@drawable/custom_button3"
        android:text="Job Status/Payment"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SearchJobButton"
        app:layout_constraintVertical_bias="0.157" />

    <ImageView
        android:id="@+id/jobIconImage"
        android:layout_width="185dp"
        android:layout_height="200dp"
        android:contentDescription="logo"
        android:src="@drawable/money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <TextView
        android:id="@+id/jobAppNameLabel"
        android:layout_width="257dp"
        android:layout_height="23dp"
        android:layout_marginTop="8dp"
        android:forceDarkAllowed="true"
        android:text="Quick Cash"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobIconImage"
        app:layout_constraintVertical_bias="0.022" />

    <Button
        android:id="@+id/jobCreateJobButton"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/custom_button"
        android:text="Create Job"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobAppNameLabel"
        app:layout_constraintVertical_bias="0.099" />

    <Button
        android:id="@+id/SearchJobButton"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button2"
        android:text="Search Job"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobCreateJobButton"
        app:layout_constraintVertical_bias="0.023" />

    <Button
        android:id="@+id/logoutButton"
        android:layout_width="250dp"
        android:layout_height="46dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/custom_button4"
        android:textAllCaps="false"
        android:text="Logout"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobCreateJobButton3" />

</androidx.constraintlayout.widget.ConstraintLayout>

