<?xml version="1.0" encoding="utf-8"?>
<!--
Author: Junied Ahmed Jisan
* Date: 2020-11-28
* Registration page with username, email, password confirmation elements
* Login and Register buttons
-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".ui.activities.Registration">

    <Button
        android:id="@+id/registrationLoginButton"
        android:layout_width="131dp"
        android:layout_height="45dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/custom_button2"
        android:text="Login"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationRegisterButton" />

    <TextView
        android:id="@+id/registrationStatusMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationConfirmPasswordText" />

    <EditText
        android:id="@+id/registrationConfirmPasswordText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/registrationEmailText"
        android:layout_alignLeft="@+id/registrationEmailText"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/check"
        android:ems="10"
        android:hint="Confirm Password"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationPasswordText"
        app:layout_constraintVertical_bias="0.027" />

    <ImageView
        android:id="@+id/registrationIconImage"
        android:layout_width="185dp"
        android:layout_height="200dp"
        android:contentDescription="logo"
        android:src="@drawable/money"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.087" />

    <EditText
        android:id="@+id/registrationUsernameText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/registrationPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/user"
        android:ems="10"
        android:hint="Username"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationAppNameLabel"
        app:layout_constraintVertical_bias="0.02"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/registrationEmailText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_above="@+id/registrationPasswordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/email"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationUsernameText"
        app:layout_constraintVertical_bias="0.013"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/registrationPasswordText"
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/registrationEmailText"
        android:layout_alignLeft="@+id/registrationEmailText"
        android:layout_marginTop="12dp"
        android:background="#11000000"
        android:drawableLeft="@drawable/pass"
        android:ems="10"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="#ffff"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationEmailText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/registrationAppNameLabel"
        android:layout_width="96dp"
        android:layout_height="29dp"
        android:layout_marginTop="12dp"
        android:forceDarkAllowed="true"
        android:text="Quick Cash"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textIsSelectable="false"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationIconImage"
        app:layout_constraintVertical_bias="0.046" />

    <Button
        android:id="@+id/registrationRegisterButton"
        android:layout_width="131dp"
        android:layout_height="45dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_button"
        android:text="Register"
        android:textAllCaps="false"
        android:textColor="#ffff"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/registrationStatusMessage"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>

